RESOLVED FIXED90378
[Microdata] Fix build failure after r121580.
https://bugs.webkit.org/show_bug.cgi?id=90378
Summary [Microdata] Fix build failure after r121580.
Arko Saha
Reported 2012-07-02 05:50:14 PDT
After revision 121580 microdata enabled build is failing with below error : ../../Source/WebCore/html/HTMLElement.cpp: In member function ‘WebCore::HTMLPropertiesCollection* WebCore::HTMLElement::properties()’: ../../Source/WebCore/html/HTMLElement.cpp:993:53: error: cannot convert ‘WebCore::HTMLCollection*’ to ‘WebCore::HTMLPropertiesCollection*’ in return ../../Source/WebCore/html/HTMLElement.cpp:995:1: warning: control reaches end of non-void function [-Wreturn-type] make[1]: *** [Source/WebCore/html/libWebCore_la-HTMLElement.lo] Error 1 make[1]: *** Waiting for unfinished jobs....
Attachments
Patch (1.67 KB, patch)
2012-07-02 05:54 PDT, Arko Saha
no flags
Archive of layout-test-results from gce-cr-linux-04 (558.21 KB, application/zip)
2012-07-02 08:15 PDT, WebKit Review Bot
no flags
Arko Saha
Comment 1 2012-07-02 05:54:19 PDT
Chris Dumez
Comment 2 2012-07-02 06:46:50 PDT
*** Bug 90380 has been marked as a duplicate of this bug. ***
WebKit Review Bot
Comment 3 2012-07-02 08:15:14 PDT
Comment on attachment 150406 [details] Patch Attachment 150406 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/13137085 New failing tests: plugins/iframe-shims.html fast/loader/loadInProgress.html
WebKit Review Bot
Comment 4 2012-07-02 08:15:17 PDT
Created attachment 150424 [details] Archive of layout-test-results from gce-cr-linux-04 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: gce-cr-linux-04 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.39-gcg-201203291735-x86_64-with-Ubuntu-10.04-lucid
Arko Saha
Comment 5 2012-07-02 08:45:26 PDT
(In reply to comment #3) > (From update of attachment 150406 [details]) > Attachment 150406 [details] did not pass chromium-ews (chromium-xvfb): > Output: http://queues.webkit.org/results/13137085 > > New failing tests: > plugins/iframe-shims.html > fast/loader/loadInProgress.html Test failure looks unrelated.
Ryosuke Niwa
Comment 6 2012-07-02 09:48:34 PDT
(In reply to comment #5) > (In reply to comment #3) > > (From update of attachment 150406 [details] [details]) > > Attachment 150406 [details] [details] did not pass chromium-ews (chromium-xvfb): > > Output: http://queues.webkit.org/results/13137085 > > > > New failing tests: > > plugins/iframe-shims.html > > fast/loader/loadInProgress.html > > Test failure looks unrelated. Even so, please don't override cq flag on someone else's patch.
Chris Dumez
Comment 7 2012-07-02 09:53:26 PDT
(In reply to comment #6) > (In reply to comment #5) > > (In reply to comment #3) > > > (From update of attachment 150406 [details] [details] [details]) > > > Attachment 150406 [details] [details] [details] did not pass chromium-ews (chromium-xvfb): > > > Output: http://queues.webkit.org/results/13137085 > > > > > > New failing tests: > > > plugins/iframe-shims.html > > > fast/loader/loadInProgress.html > > > > Test failure looks unrelated. > > Even so, please don't override cq flag on someone else's patch. My bad, I got confused with since my bug was marked as a duplicate. Sorry.
WebKit Review Bot
Comment 8 2012-07-02 10:30:51 PDT
Comment on attachment 150406 [details] Patch Clearing flags on attachment: 150406 Committed r121692: <http://trac.webkit.org/changeset/121692>
WebKit Review Bot
Comment 9 2012-07-02 10:30:58 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.