Microdata: Fix build failure after r121580. https://bugs.webkit.org/show_bug.cgi?id=90378

Reviewed by Ryosuke Niwa.

* html/HTMLElement.cpp:
(WebCore::HTMLElement::properties):
* html/HTMLElement.h:


Canonical link: https://commits.webkit.org/108252@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121692 268f45cc-cd09-0410-ab3c-d52691b4dbfc